@@ -1,5 +1,9 @@
 2010-08-31  MIYAMUKO Katsuyuki
 
+	* api/types.l: user 構造体の name を fullname に変更。
+	アクセッサが ed::user-name とかぶるのを防ぐのと
+	user-login と user-name の区別を付けやすくするため。
+
 	* api/gist-unofficial.l, api/gist.l: id を引数に指定する関数には
 	gist 構造体も指定できるようにした。
 
